--- a/app/src/main/res/layout/ac_recycleview_cardview_content_video_item.xml
+++ b/app/src/main/res/layout/ac_recycleview_cardview_content_video_item.xml
@@ -4,20 +4,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="50dp"
     android:layout_marginTop="@dimen/recycle_view_margin"
     android:clickable="true"
     android:foreground="?selectableItemBackground"
     app:cardCornerRadius="@dimen/shape">
 
     <TextView
-        android:id="@+id/ac_recycle_view_content_info_video"
+        android:id="@+id/ac_recycle_view_content_info_video_tv"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginLeft="@dimen/recycle_view_margin"
         android:layout_marginRight="60dp"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|left"
         android:singleLine="true"
         android:textSize="14sp"/>
+
+    <CheckBox
+        android:id="@+id/ac_recycle_view_content_info_video_cb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|right"
+        android:layout_marginRight="@dimen/recycle_view_margin"/>
 
 </android.support.v7.widget.CardView>
