--- a/app/src/main/res/layout/ac_rv_cardview_content_video_item.xml
+++ b/app/src/main/res/layout/ac_rv_cardview_content_video_item.xml
@@ -5,26 +5,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:layout_marginTop="@dimen/recycle_view_margin"
+    android:layout_marginTop="@dimen/rv_margin"
     android:clickable="true"
     android:foreground="?selectableItemBackground"
     app:cardCornerRadius="@dimen/shape">
 
     <TextView
-        android:id="@+id/ac_recycle_view_content_info_video_tv"
+        android:id="@+id/ac_rv_content_info_video_tv"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginLeft="@dimen/recycle_view_margin"
+        android:layout_marginLeft="@dimen/rv_margin"
         android:layout_marginRight="60dp"
         android:gravity="center_vertical|left"
         android:singleLine="true"
         android:textSize="14sp"/>
 
     <CheckBox
-        android:id="@+id/ac_recycle_view_content_info_video_cb"
+        android:id="@+id/ac_rv_content_info_video_cb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|right"
-        android:layout_marginRight="@dimen/recycle_view_margin"/>
+        android:layout_marginRight="@dimen/rv_margin"/>
 
 </android.support.v7.widget.CardView>
