--- a/app/src/main/res/layout/ac_rv_cardview_essay.xml
+++ b/app/src/main/res/layout/ac_rv_cardview_essay.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-    android:id="@+id/ac_recycle_view_essay_cv"
+    android:id="@+id/ac_rv_essay_cv"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/ac_recycle_view_essay_cv_title"
+            android:id="@+id/ac_rv_essay_cv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -31,14 +31,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/ac_recycle_view_essay_cv_name"
+                android:id="@+id/ac_rv_essay_cv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textSize="10sp"/>
 
             <TextView
-                android:id="@+id/ac_recycle_view_essay_cv_time"
+                android:id="@+id/ac_rv_essay_cv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -51,7 +51,7 @@
                 android:layout_weight="1"/>
 
             <TextView
-                android:id="@+id/ac_recycle_view_essay_cv_click"
+                android:id="@+id/ac_rv_essay_cv_click"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -59,7 +59,7 @@
                 android:textSize="10sp"/>
 
             <TextView
-                android:id="@+id/ac_recycle_view_essay_cv_reply"
+                android:id="@+id/ac_rv_essay_cv_reply"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
