--- a/app/src/main/res/layout/ac_rv_cardview_navigation_button.xml
+++ b/app/src/main/res/layout/ac_rv_cardview_navigation_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-    android:id="@+id/ac_recycle_view_navigation_cv"
+    android:id="@+id/ac_rv_navigation_cv"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,14 +11,14 @@
     app:cardCornerRadius="@dimen/shape">
 
     <ImageView
-        android:id="@+id/ac_recycle_view_navigation_img"
+        android:id="@+id/ac_rv_navigation_img"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="13dp"/>
 
     <TextView
-        android:id="@+id/ac_recycle_view_navigation_tv"
+        android:id="@+id/ac_rv_navigation_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
