--- a/app/src/main/res/layout/ac_rv_title.xml
+++ b/app/src/main/res/layout/ac_rv_title.xml
@@ -9,7 +9,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/ac_recycle_view_tv_title"
+        android:id="@+id/ac_rv_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
