--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -10,6 +10,6 @@
     <dimen name="tab_height">48dp</dimen>
     <dimen name="shape">2dp</dimen>
 
-    <dimen name="recycle_view_margin">8dp</dimen>
-    <dimen name="recycle_view_bottom">8dp</dimen>
+    <dimen name="rv_margin">8dp</dimen>
+    <dimen name="rv_bottom">8dp</dimen>
 </resources>
