--- a/app/src/main/res/layout/ac_rv_content_download.xml
+++ b/app/src/main/res/layout/ac_rv_content_download.xml
@@ -10,12 +10,15 @@
     android:foreground="?selectableItemBackground"
     card_view:cardCornerRadius="@dimen/shape">
 
-    <Button
+    <TextView
         android:id="@+id/ac_rv_content_download_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_gravity="center"
         android:background="@color/pink_base"
+        android:gravity="center"
         android:text="下载"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:textSize="18sp"/>
 
 </android.support.v7.widget.CardView>
