add download recyclerview adpater

--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -6,6 +6,14 @@
 
     <include layout="@layout/toolbar"/>
 
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/download_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/rv_bottom"
+        android:paddingLeft="@dimen/rv_margin"
+        android:paddingRight="@dimen/rv_margin"
+        android:scrollbars="none"/>
 
 </LinearLayout>
