add Nb Download

--- a/vitamio-sample/res/layout/subtitle2.xml
+++ b/vitamio-sample/res/layout/subtitle2.xml
@@ -33,6 +33,6 @@
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@id/sub1"
         android:background="@drawable/mediacontroller_sreen_size_100"
-        android:onClick="changeLayout" />
+        android:onToggle="changeLayout" />
 
 </RelativeLayout>
