--- a/app/src/main/res/layout/activity_download_rv_downloading.xml
+++ b/app/src/main/res/layout/activity_download_rv_downloading.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:clickable="true"
     android:foreground="?selectableItemBackground"
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:background="@color/pink_base"
             android:gravity="center_vertical">
 
@@ -29,21 +29,12 @@
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
                 android:singleLine="true"
+                android:text="fadsfsdaf"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
         </LinearLayout>
-
-        <!--<TextView-->
-        <!--android:id="@+id/download_item_title"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="30dp"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:singleLine="true"-->
-        <!--android:text="16sp"/>-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,37 +46,39 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_weight="6"
-                android:textSize="14sp"
+                android:text="测试api请求 添加okhttp和retrofit"
                 android:gravity="center_vertical"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:textSize="14sp"/>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginRight="8dp"
                 android:layout_weight="4"
                 android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                <!--<Space-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="1"/>-->
 
                 <TextView
                     android:id="@+id/download_size_tv"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginRight="8dp"
+                    android:gravity="end"
+                    android:text="100MB/200MB"
                     android:textSize="12sp"/>
 
-                <TextView
-                    android:id="@+id/download_total_size_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="12sp"/>
+                <!--<TextView-->
+                <!--android:id="@+id/download_total_size_tv"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:textSize="12sp"/>-->
 
             </LinearLayout>
 
@@ -106,14 +99,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
-            <TextView
-                android:id="@+id/download_percent_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:gravity="center_vertical"
-                android:minWidth="20dp"
-                android:textSize="10sp"/>
+            <!--<TextView-->
+            <!--android:id="@+id/download_percent_tv"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:minWidth="20dp"-->
+            <!--android:textSize="10sp"/>-->
 
         </LinearLayout>
 
