--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <org.succlz123.blueboard.controller.activity.video.xxx
+    <org.succlz123.okplayer.view.OkVideoView
         android:id="@+id/ok_video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -23,7 +23,7 @@
         android:layout_gravity="top"
         android:background="@color/video_background"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/video_back"
@@ -34,6 +34,7 @@
             android:background="@drawable/back"/>
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="15dp"
@@ -41,7 +42,7 @@
             android:gravity="center_vertical"
             android:maxLines="1"
             android:singleLine="true"
-            android:text="Belive"
+            android:text=""
             android:textColor="#FFFFFF"
             android:textSize="18sp"/>
 
@@ -72,26 +73,28 @@
         android:background="@color/video_background"
         android:gravity="center"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
+            android:id="@+id/iv_play"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/ic_play_arrow_white_48dp"/>
+            android:layout_marginRight="10dp"
+            android:background="@android:drawable/ic_media_play"/>
 
-        <ProgressBar
-            android:id="@+id/probar"
+        <SeekBar
+            android:id="@+id/sb_rate"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="10dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
         <TextView
+            android:id="@+id/tv_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="15dp"
             android:text="00:00 / 00:00"
             android:textColor="@color/white"/>
@@ -158,34 +161,43 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/fl_download_rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@color/video_background"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
-            android:id="@+id/download_rate"
+            android:id="@+id/tv_download_rate"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="35dp"
+            android:layout_marginBottom="25dp"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="25dp"
             android:gravity="center"
-            android:text="133kb / 79%"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
-    </LinearLayout>
+    </FrameLayout>
 
-    <ProgressBar
-        android:id="@+id/loading_pro_bar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+    <FrameLayout
+        android:id="@+id/fl_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
 
 </FrameLayout>
