--- a/app/src/main/res/layout/drawerlayout_main.xml
+++ b/app/src/main/res/layout/drawerlayout_main.xml
@@ -15,13 +15,13 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/fragment_main_tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
+            android:layout_height="wrap_content"
             android:background="@color/pink_base"
             app:tabIndicatorColor="@color/white"
             app:tabSelectedTextColor="@color/white"
