--- a/app/src/main/res/layout/ac_activity_content.xml
+++ b/app/src/main/res/layout/ac_activity_content.xml
@@ -3,12 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -17,6 +19,7 @@
             android:layout_height="190dp"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="40dp"
+            android:fitsSystemWindows="true"
             app:expandedTitleMarginStart="40dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
