--- a/app/src/main/res/layout/drawerlayout_main.xml
+++ b/app/src/main/res/layout/drawerlayout_main.xml
@@ -21,7 +21,7 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/fragment_main_tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="37dp"
             android:background="@color/pink_base"
             app:tabIndicatorColor="@color/white"
             app:tabSelectedTextColor="@color/white"
