--- a/app/src/main/res/values-v21/style.xml
+++ b/app/src/main/res/values-v21/style.xml
@@ -1,20 +1,26 @@
 <resources>
 
     <style name="AppTheme" parent="BaseTheme">
-        <!--状态栏颜色-->
-        <item name="android:statusBarColor">@color/pink_base_dark</item>
-        <!--&lt;!&ndash;底部导航栏透明&ndash;&gt;-->
-        <!--<item name="android:windowTranslucentNavigation">true</item>-->
-        <!--<item name="android:navigationBarColor">@android:color/transparent</item>-->
 
-    </style>
-
-    <!--状态栏透明 DrawerLayout-->
-    <style name="TranslucentStatusTheme" parent="AppTheme">
         <!--drawablelayout覆盖在toolbar上-->
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <!--状态栏透明-->
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
+    </style>
+
+    <!--&lt;!&ndash;状态栏透明 DrawerLayout&ndash;&gt;-->
+    <!--<style name="TranslucentStatusTheme" parent="AppTheme">-->
+    <!--&lt;!&ndash;drawablelayout覆盖在toolbar上&ndash;&gt;-->
+    <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+    <!--&lt;!&ndash;状态栏透明&ndash;&gt;-->
+    <!--<item name="android:windowTranslucentStatus">true</item>-->
+    <!--</style>-->
+
+    <style name="tabTheme" parent="AppTheme">
+        <!--<item name="android:windowTranslucentStatus">false</item>-->
+        <item name="android:statusBarColor">@color/pink_base_dark</item>
     </style>
 
     <!--底部导航栏透明 -->
