--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,49 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2015 The Android Open Source Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/aa"
-            android:title="Home" />
-        <item
-            android:id="@+id/nav_messages"
-            android:icon="@drawable/aa"
-            android:title="Messages" />
-        <item
-            android:id="@+id/nav_friends"
-            android:icon="@drawable/aa"
-            android:title="Friends" />
-        <item
-            android:id="@+id/nav_discussion"
-            android:icon="@drawable/aa"
-            android:title="Discussion" />
+
+        <item android:id="@+id/nav_home"
+              android:icon="@drawable/ic_home_white_48dp"
+              android:title="主页"/>
+
     </group>
 
-    <item android:title="Sub items">
+    <item android:title="其他">
+
         <menu>
-            <item
-                android:icon="@drawable/aa"
-                android:title="Sub item 1" />
-            <item
-                android:icon="@drawable/aa"
-                android:title="Sub item 2" />
+
+            <item android:icon="@drawable/ic_file_download_white_48dp"
+                  android:id="@+id/nav_download"
+                  android:title="下载"/>
+            <item android:icon="@drawable/ic_settings_white_48dp"
+                  android:id="@+id/nav_setting"
+                  android:title="设置"/>
+            <item android:icon="@drawable/ic_dashboard_white_48dp"
+                  android:id="@+id/nav_about"
+                  android:title="关于"/>
         </menu>
+
     </item>
 
 </menu>
